--- a/package.json
+++ b/package.json
@@ -1,28 +1,34 @@
 {
-    "name": "learn-react",
-    "private": true,
-    "version": "0.0.0",
-    "type": "module",
-    "scripts": {
-        "format": "prettier --write .",
-        "dev": "vite",
-        "build": "vite build",
-        "preview": "vite preview"
-    },
-    "dependencies": {
-        "@tabler/icons": "^1.110.0",
-        "clsx": "^1.2.1",
-        "react": "^18.2.0",
-        "react-dom": "^18.2.0"
-    },
-    "devDependencies": {
-        "@types/react": "^18.0.24",
-        "@types/react-dom": "^18.0.8",
-        "@vitejs/plugin-react": "^2.2.0",
-        "autoprefixer": "^10.4.13",
-        "postcss": "^8.4.18",
-        "prettier": "2.7.1",
-        "tailwindcss": "^3.2.2",
-        "vite": "^3.2.3"
-    }
+  "name": "learn-react",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
+  "scripts": {
+    "format": "prettier --write .",
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
+  },
+  "dependencies": {
+    "@tabler/icons-react": "^2.5.0",
+    "clsx": "^1.2.1",
+    "npm-check-updates": "^16.7.9",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
+  },
+  "devDependencies": {
+    "@types/react": "^18.0.28",
+    "@types/react-dom": "^18.0.11",
+    "@vitejs/plugin-react": "^3.1.0",
+    "autoprefixer": "^10.4.13",
+    "eslint": "^8.34.0",
+    "eslint-config-standard": "^17.0.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-n": "^15.6.1",
+    "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-react": "^7.32.2",
+    "prettier": "2.8.4",
+    "tailwindcss": "^3.2.7",
+    "vite": "^4.1.4"
+  }
 }
